--- a/index.html
+++ b/index.html
@@ -1,139 +1,212 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Bruno Rhis</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.justificado {
+				text-align: left;
+				
+			}
+		</style>
+	</head>
+	<body class="is-preload">
 
-<head>
-    <title>Bruno Rhis</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <style>
-        .justificado {
-            text-align: left;
-        }
+		<!-- Header -->
+			<div id="header">
 
-        /* Add new CSS for responsive navigation */
-        #nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+				<div class="top">
 
-        #nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/avatar2.jpg" alt="" /></span>
+							<h1 id="title">Bruno Rhis</h1>
+							<p>- Student</p>
+							<p>- Pentester</p>
+							<p>- Tech Support</p>
+							<p>- Consultant</p>
+						</div>
 
-        #nav ul li {
-            margin: 0 10px;
-        }
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">Perfil Profissional</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contato</span></a></li>
+							</ul>
+						</nav>
 
-        #nav ul li a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 16px;
-        }
+				</div>
 
-        #nav-toggle {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
+				<div class="bottom">
 
-        @media screen and (max-width: 768px) {
-            #nav ul {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-                position: absolute;
-                top: 60px;
-                left: 0;
-                background: #333;
-            }
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://twitter.com/StolenByAnOtter" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/brunorhis/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/brunorhis" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#contact" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 
-            #nav ul.show {
-                display: flex;
-            }
+				</div>
 
-            #nav ul li {
-                margin: 0;
-                text-align: center;
-            }
+			</div>
 
-            #nav-toggle {
-                display: flex;
-            }
-        }
-    </style>
-</head>
+		<!-- Main -->
+			<div id="main">
 
-<body class="is-preload">
+				<!-- Intro -->
+					<section id="top" class="one dark cover">
+						<div class="container">
 
-    <!-- Header -->
-    <div id="header">
+							<header>
+								<h2 class="alt">Olá, sou o <Strong>Bruno</Strong>.</h2>
+								<p>Entusiasta de tecnologia, especializado em Tech Support e Hacking Ético.</p>
+							</header>
 
-        <div class="top">
+							<footer>
+								<a href="#portfolio" class="button scrolly">Projetos e Artigos</a>
+							</footer>
 
-            <!-- Logo -->
-            <div id="logo">
-                <span class="image avatar48"><img src="images/avatar2.jpg" alt="" /></span>
-                <h1 id="title">Bruno Rhis</h1>
-                <p>- Student</p>
-                <p>- Pentester</p>
-                <p>- Tech Support</p>
-                <p>- Consultant</p>
-            </div>
+						</div>
+					</section>
 
-            <!-- Nav -->
-            <nav id="nav">
-                <div id="nav-toggle">&#9776;</div>
-                <ul>
-                    <li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-                    <li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-                    <li><a href="#about" id="about-link"><span class="icon solid fa-user">Perfil Profissional</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contato</span></a></li>
-                </ul>
-            </nav>
+				<!-- Portfolio -->
+					<section id="portfolio" class="two">
+						<div class="container">
 
-        </div>
+							<header>
+								<h2>Portfolio</h2>
+							</header>
 
-        <div class="bottom">
+							<p>Olá, visitante! Sou Bruno, e este é o meu portfólio digital, um espaço onde compartilho minha jornada no vasto universo da tecnologia e hacking ético. Aqui, você encontrará uma coleção de artigos que refletem não apenas meu conhecimento, mas também minha paixão por explorar e entender as complexidades do mundo digital.</p>
 
-            <!-- Social Icons -->
-            <ul class="icons">
-                <li><a href="https://twitter.com/StolenByAnOtter" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/brunorhis/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="https://github.com/brunorhis" class="icon brands fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#contact" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-            </ul>
+							<div class="row">
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>CRTP Cheat sheet</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>Rhoncus Semper</h3>
+										</header>
+									</article>
+								</div>
+								<!--<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3>Magna Nullam</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Natoque Vitae</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<header>
+											<h3>Dolor Penatibus</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>Orci Convallis</h3>
+										</header>
+									</article>
+								</div>-->
+							</div>
 
-        </div>
+						</div>
+					</section>
 
-    </div>
+				<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
 
-    <!-- Main -->
-    <!-- Your existing content... -->
+							<header>
+								<h2>Perfil Profissional</h2>
+							</header>
 
-    <!-- Footer -->
-    <!-- Your existing footer... -->
+							<!--<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>-->
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" style="width: 900px; height: 300px; border-radius: 15px;" /></a>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+							<p class="justificado">É com grande prazer que me apresento. Meu nome é Bruno, tenho 30 anos e estou atualmente cursando Tecnólogo em Defesa Cibernética na Estácio, com previsão de formatura no final de 2025.</p>
+    						<p class="justificado">Desde a conclusão do curso técnico em eletrônica no ensino médio, tenho mantido uma forte conexão com o campo da tecnologia. Ao longo dos anos, acumulei experiência significativa em hardware e atendimento ao cliente, trabalhando em diversas autorizadas. Durante minha trajetória profissional, obtive diversas certificações, com destaque para ACMT e ACIT, principalmente focadas em produtos Apple, que sempre foram minha área de concentração.</p>
+    						<p class="justificado">No campo de cibersegurança e TI, conquistei a certificação DCPT (Desec Certified Penetration Tester) pela Desec Security no final de 2023. Atualmente, estou em processo de obtenção da CRTP (Certified Red Team Professional), oferecida pela renomada empresa internacional Altered Security.</p>
+    						<p class="justificado">Sou um profissional dedicado, sempre em busca do aprimoramento contínuo. Estou disposto a adquirir conhecimento e, em contrapartida, agregar valor às oportunidades que me são oferecidas.</p>
+    						<p class="justificado">Atenciosamente,</p>
+    						<p class="justificado">Bruno Rhis</p>
 
-    <script>
-        // Add JavaScript to toggle the responsive navigation
-        document.getElementById('nav-toggle').addEventListener('click', function () {
-            var navList = document.getElementById('nav').querySelector('ul');
-            navList.classList.toggle('show');
-        });
-    </script>
-</body>
+						<!-- Botão de Download do Currículo -->
+						<a href="resume-bruno.pdf" download class="button">Download do Currículo</a>	
+						</div>
+					</section>
 
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Contato</h2>
+							</header>
+
+							<p>Duvidas, sugestões ou se quiser entrar em contato comigo me envie um e-mail no formulário abaixo:	</p>
+
+							<form method="post" action="https://formspree.io/f/xgegayjb">
+								<div class="row">
+									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="col-12">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+								<h3 align="left">Doações:</h3>
+									<p><a href="https://www.buymeacoffee.com/buru1"> <img align="left" src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png" height="50" width="210" alt="https://www.buymeacoffee.com/buru1" /></a></p><br><br>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<div id="footer">
+
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
