--- a/teste.html
+++ b/teste.html
@@ -6,26 +6,39 @@
     <title>Seu Título Aqui</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Courier New', monospace;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #222;
+            color: #00ff00;
         }
 
         header {
-            background-color: #007bff;
-            color: #fff;
+            background-color: #000;
+            color: #00ff00;
             padding: 20px;
             text-align: center;
+        }
+
+        nav {
+            background-color: #111;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: #00ff00;
+            text-decoration: none;
+            padding: 10px;
+            margin: 0 10px;
         }
 
         article {
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #333;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
@@ -33,8 +46,8 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #007bff;
-            color: #fff;
+            background-color: #000;
+            color: #00ff00;
             position: fixed;
             width: 100%;
             bottom: 0;
@@ -49,7 +62,7 @@
 
         /* Estilo adicional para links no artigo */
         article a {
-            color: #007bff;
+            color: #00ff00;
             text-decoration: underline;
         }
 
@@ -58,12 +71,12 @@
             width: 10px;
         }
         ::-webkit-scrollbar-thumb {
-            background-color: #007bff;
+            background-color: #00ff00;
         }
 
         /* Adicionando um estilo hover para os links */
         article a:hover {
-            color: #0056b3;
+            color: #00cc00;
         }
     </style>
 </head>
@@ -72,6 +85,12 @@
     <header>
         <h1>Seu Título Aqui</h1>
     </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Artigos</a>
+        <a href="#">Contato</a>
+    </nav>
 
     <article>
         <h2>Seu Título de Artigo</h2>
