--- a/teste.html
+++ b/teste.html
@@ -32,6 +32,7 @@
             text-decoration: none;
             padding: 10px;
             margin: 0 10px;
+            display: inline-block;
         }
 
         article {
@@ -55,6 +56,11 @@
 
         /* Adicionando um estilo responsivo */
         @media only screen and (max-width: 600px) {
+            nav a {
+                display: block;
+                margin: 10px 0;
+            }
+
             article {
                 padding: 10px;
             }
