--- a/teste.html
+++ b/teste.html
@@ -10,19 +10,19 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #222;
+            background: url('seu-background.jpg') center/cover fixed no-repeat; /* Adicione a URL da sua imagem de background */
             color: #00ff00;
         }
 
         header {
-            background-color: #000;
+            background-color: rgba(0, 0, 0, 0.8);
             color: #00ff00;
             padding: 20px;
             text-align: center;
         }
 
         nav {
-            background-color: #111;
+            background-color: rgba(0, 0, 0, 0.8);
             padding: 10px;
             text-align: center;
         }
@@ -39,15 +39,15 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #333;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: rgba(0, 0, 0, 0.7);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             border-radius: 8px;
         }
 
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #000;
+            background-color: rgba(0, 0, 0, 0.8);
             color: #00ff00;
             position: fixed;
             width: 100%;
