--- a/teste.html
+++ b/teste.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: url('imagens/bground.jpg') center/cover fixed no-repeat; /* Adicione a URL da sua imagem de background */
+            background: url('images/bground.jpg') center/cover fixed no-repeat; /* Adicione a URL da sua imagem de background */
             color: #00ff00;
         }
 
