--- a/artigos/index.html
+++ b/artigos/index.html
@@ -24,7 +24,60 @@
         <p>Adicione mais parágrafos conforme necessário.</p>
         <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
     </article>
-
+    <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
+        <article>
+        <h2>Seu Título de Artigo</h2>
+        <p>Seu conteúdo de artigo vai aqui.</p>
+        <p>Adicione mais parágrafos conforme necessário.</p>
+        <p>Adicione <a href="#">links</a> ou outros elementos conforme necessário.</p>
+    </article>
     <footer>
         <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
     </footer>
