--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/intro/styles.css">
     <title>Seu Nome - Portfólio</title>
 </head>
 <body>
@@ -16,6 +16,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/js/intro/script.js"></script>
 </body>
 </html>
