--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/intro/styles.css">
-    <title>Seu Nome - Portfólio</title>
+    <title>Bruno Rhis - Intro</title>
 </head>
 <body>
     <div class="terminal">
