--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Bruno Rhis</title>
 
-    <link rel="icon" type="png|image" href="IMAGES/sailogo.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" type="png|image" href="assets/IMAGES/sailogo.png">
+    <link rel="stylesheet" href="assets/CSS/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
@@ -69,7 +69,7 @@
                 <span></span>
                 <span></span>
                 <div class="image">
-                    <img src="IMAGES/saianon.png" alt="">
+                    <img src="assets/IMAGES/saianon.png" alt="">
                 </div>
             </div>
         </div>
