--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
                 <a href="https://wa.me/9987886552" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.instagram.com/sai_127.0.0.1/" target="_blank"><i class='bx bxl-instagram'></i></a>
             </div>
-           <a href="" class="btn-box" download="Sai CV/Resume">Download CV</a>
+           <a href="" class="btn-box" download="resume-bruno.pdf">Download CV</a>
         </div>
 
         <div class="home-img">
