--- a/main.html
+++ b/main.html
@@ -56,10 +56,10 @@
             </p>
 
             <div class="home-sci">
-                <a href="https://github.com/SAI127001" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="https://www.linkedin.com/in/terukula-sai/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://wa.me/9987886552" target="_blank"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://www.instagram.com/sai_127.0.0.1/" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/brunorhis" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/brunorhis/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://discord.gg/gfYw7kfMDU" target="_blank"><i class='bx bxl-discord'></i></a>
+                <a href="https://www.instagram.com/brunorhis/" target="_blank"><i class='bx bxl-instagram'></i></a>
             </div>
            <a href="" class="btn-box" download="resume-bruno.pdf">Download CV</a>
         </div>
