--- a/main.html
+++ b/main.html
@@ -49,10 +49,9 @@
                 </script>
             </span></h3>
             
-            <p>  &emsp; &emsp;This portfolio highlights my passion for cybersecurity and my commitment to ethical practices. <br> <br>
-                &emsp; &emsp;I have acquired fundamental knowledge and skills in various areas of ethical hacking, 
-                allowing me to contribute to the security of organizations and individuals. <br> <br>
-                &emsp; &emsp;Hacked multiple Wifi network that were based on WPS protocol.  
+            <p>  &emsp; &emsp;Nesse portifólio irei postar minhas realizações profissionais, ferramentas que faço para realizar testes de penetração e artigos sobre coisas que estou estudando  <br> <br>
+                &emsp; &emsp;Espero contribuir para a comunidade de cibersegurança assim como recebo feedbacks e contribuições de amigos e colegas de área <br> <br>
+                &emsp; &emsp;Let's Hack  
             </p>
 
             <div class="home-sci">
