--- a/main.html
+++ b/main.html
@@ -39,7 +39,8 @@
                         "Pentester",
                         "Programador",
                         "Consultor de TI",
-                        "Estudante de cyber segurança",
+                        "Estudante",
+                        "Entusiasta",
                       ],
                       typeSpeed: 100,   
                       backSpeed: 100,   
