--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
             
             <p>  &emsp; &emsp;Nesse portifólio irei postar minhas realizações profissionais, ferramentas que faço para realizar testes de penetração e artigos sobre coisas que estou estudando  <br> <br>
                 &emsp; &emsp;Espero contribuir para a comunidade de cibersegurança assim como recebo feedbacks e contribuições de amigos e colegas de área <br> <br>
-                &emsp; &emsp;Let's Hack  
+                &emsp; &emsp;Let's Hack!  
             </p>
 
             <div class="home-sci">
