--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
                 <a href="https://discord.gg/gfYw7kfMDU" target="_blank"><i class='bx bxl-discord'></i></a>
                 <a href="https://www.instagram.com/brunorhis/" target="_blank"><i class='bx bxl-instagram'></i></a>
             </div>
-           <a href="" class="btn-box" download="resume-bruno.pdf">Download CV</a>
+           <!--<a href="" class="btn-box" download="resume-bruno.pdf">Download CV</a>-->
         </div>
 
         <div class="home-img">
