--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 <span></span>
                 <span></span>
                 <div class="image">
-                    <img src="assets/IMAGES/saianon.png" alt="">
+                    <img src="assets/IMAGES/mage.png" alt="">
                 </div>
             </div>
         </div>
