--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">{ Bruno }</a>
+        <a href="#" class="logo">{ 𝐁𝐫𝐮𝐧𝐨 }</a>
 
         <nav class="navbar">
             <a href="#home" style="--i:1;" class="active">Home</a>
