--- a/main.html
+++ b/main.html
@@ -78,6 +78,6 @@
 
 </body> 
 <footer>
-        <p>&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;Créditos para <a href="https://github.com/SAI127001" target="_blank">SAI127001</a></p>
+        <p>Créditos para <a href="https://github.com/SAI127001" target="_blank">SAI127001</a></p>
 </footer>
 </html> 
