--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
     </section>
 
 </body> 
-<!--<footer>
+<footer>
         <p>Créditos para <a href="https://github.com/SAI127001" target="_blank">SAI127001</a></p>
-</footer>-->
+</footer>
 </html> 
