--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 
         <nav class="navbar">
             <a href="#home" style="--i:1;" class="active">Home</a>
-            <a href="Pages/whoami.html" style="--i:2;">Whoami</a>
-            <a href="Pages/skills.html" style="--i:3;">Skills</a>
-            <a href="Pages/artigos.html" style="--i:4;">Artigos</a>
-            <a href="Pages/contato.html" style="--i:5;">Contato</a>
+            <a href="assets/Pages/whoami.html" style="--i:2;">Whoami</a>
+            <a href="assets/Pages/skills.html" style="--i:3;">Skills</a>
+            <a href="assets/Pages/artigos.html" style="--i:4;">Artigos</a>
+            <a href="assets/Pages/contato.html" style="--i:5;">Contato</a>
         </nav>
     </header>
 
