--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -19,10 +19,10 @@
 
         <nav class="navbar">
             <a href="../index.html" style="--i:1;" class="active">Home</a>
-            <a href="Pages/whoami.html" style="--i:2;">Whoami</a>
-            <a href="Pages/skills.html" style="--i:3;">Skills</a>
-            <a href="Pages/artigos.html" style="--i:4;">Artigos</a>
-            <a href="Pages/contato.html" style="--i:5;">Contato</a>
+            <a href="whoami.html" style="--i:2;">Whoami</a>
+            <a href="skills.html" style="--i:3;">Skills</a>
+            <a href="artigos.html" style="--i:4;">Artigos</a>
+            <a href="contato.html" style="--i:5;">Contato</a>
         </nav>
     </header>
     <section id="about" class="about">
