--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> </a>
 
         <nav class="navbar">
-            <a href="../main.html" style="--i:1;" class="active">Home</a>
+            <a href="../../main.html" style="--i:1;" class="active">Home</a>
             <a href="whoami.html" style="--i:2;">Whoami</a>
             <a href="skills.html" style="--i:3;">Skills</a>
             <a href="artigos.html" style="--i:4;">Artigos</a>
