--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -28,7 +28,7 @@
     <section id="about" class="about">
 
 
-        <div class="home-content" data-scroll data-scroll-speed="-5">
+        <div >
             
             </span></h3>
             
