--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -25,7 +25,7 @@
             <a href="contato.html" style="--i:5;">Contato</a>
         </nav>
     </header>
-	 <section>
+	 <section id="about" class="about">
             <div>
 	    <p>&emsp; &emsp;Esta é a minha página de quem sou eu. Personalize este espaço 
             para compartilhar mais sobre você, suas habilidades, experiências e interesses.</p>
