--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/intro/styles.css">
+    <link rel="icon" type="png|image" href="assets/IMAGES/sailogo.png">
     <title>Bruno Rhis - Intro</title>
 </head>
 <body>
