--- a/main.html
+++ b/main.html
@@ -50,8 +50,8 @@
                 </script>
             </span></h3>
             
-            <p>  &emsp; &emsp;Nesse portifólio irei postar minhas realizações profissionais, ferramentas que faço para realizar testes de penetração e artigos sobre coisas que estou estudando  <br> <br>
-                &emsp; &emsp;Espero contribuir para a comunidade de cibersegurança assim como recebo feedbacks e contribuições de amigos e colegas de área <br> <br>
+            <p>  &emsp; &emsp;Nesse portifólio irei postar minhas realizações profissionais, ferramentas que faço para realizar testes de penetração e artigos sobre coisas que estou estudando.  <br> <br>
+                &emsp; &emsp;Espero contribuir para a comunidade de cibersegurança assim como recebo feedbacks e contribuições de amigos e colegas de área. <br> <br>
                 &emsp; &emsp;Let's Hack!  
             </p>
 
