--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,8 +33,7 @@
             </span></h3>
             
             <div>
-	    <p>&emsp; &emsp;Esta é a minha página de quem sou eu. Personalize este espaço 
-            para compartilhar mais sobre você, suas habilidades, experiências e interesses.</p>
+	    <p>&emsp; &emsp;Em Contrução.</p>
             </div><br><br><br><br>
 
 
