--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -27,9 +27,8 @@
     </header>
 	 <section id="about" class="about">
             <div>
-	    <p>&emsp; &emsp;Esta é a minha página de quem sou eu. Personalize este espaço 
-            para compartilhar mais sobre você, suas habilidades, experiências e interesses.</p>
-            </div>
+	    <p>&emsp; &emsp;Em Contrução.</p>
+            </div><br><br><br><br>
 	 </section>
     </section>
 
