--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -26,6 +26,11 @@
         </nav>
     </header>
 	 <section id="about" class="about">
+	    <div class="about-content">
+    	    <h3>Olá, eu sou Bruno Rhis</h3>
+    	    <p>Eu sou um desenvolvedor web apaixonado por tecnologia e inovação. Tenho experiência em diversas linguagens de programação e frameworks, e estou sempre em busca de aprender e me atualizar sobre as novidades do setor.</p>
+   	    <p>Fora do trabalho, gosto de praticar esportes, ler livros e assistir séries e filmes.</p>
+	    </div>
             <div>
 	    <p>&emsp; &emsp;Em Contrução.</p>
             </div><br><br><br><br>
