--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -25,7 +25,7 @@
             <a href="contato.html" style="--i:5;">Contato</a>
         </nav>
     </header>
-	 <section id="about" class="about">
+	 <section>
 	    <div class="about-content">
     	    <h3>Olá, eu sou Bruno Rhis</h3>
     	    <p>Eu sou um desenvolvedor web apaixonado por tecnologia e inovação. Tenho experiência em diversas linguagens de programação e frameworks, e estou sempre em busca de aprender e me atualizar sobre as novidades do setor.</p>
