--- a/index.html
+++ b/index.html
@@ -3,20 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/intro/styles.css">
     <link rel="icon" type="png|image" href="assets/IMAGES/sailogo.png">
     <title>Bruno Rhis - Intro</title>
+    <style>
+        body {
+            background: #000;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .terminal {
+            background: #000;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+            width: 80%;
+            max-width: 800px;
+            height: 70vh;
+            overflow-y: auto;
+        }
+
+        #output {
+            white-space: pre-wrap;
+            margin: 0;
+        }
+
+        #input-line {
+            display: flex;
+        }
+
+        .prompt {
+            margin-right: 10px;
+        }
+
+        #input {
+            flex-grow: 1;
+            background: none;
+            border: none;
+            color: #00ff00;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 16px;
+            outline: none;
+        }
+
+        #input-line .cursor {
+            border-left: 2px solid #00ff00;
+            animation: blink 1s step-end infinite;
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="terminal">
         <pre id="output">Inicializando sistema...<br></pre>
         <div id="input-line">
             <span class="prompt">></span>
-            <input type="text" id="input" autofocus disabled>
-            <div class="cursor"></div>
+            <input type="text" id="input" autofocus>
         </div>
     </div>
 
-    <script src="assets/js/intro/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const input = document.getElementById('input');
+            const output = document.getElementById('output');
+
+            input.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    const command = input.value.trim();
+                    if (command) {
+                        processCommand(command);
+                        input.value = '';
+                    }
+                }
+            });
+
+            function processCommand(command) {
+                const response = `Comando '${command}' não encontrado.`;
+                output.innerHTML += `> ${command}\n${response}\n`;
+                output.scrollTop = output.scrollHeight;
+            }
+
+            input.removeAttribute('disabled');
+            input.focus();
+
+            output.innerHTML += 'Sistema inicializado.\n';
+        });
+    </script>
 </body>
 </html>
