--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                     case 'site':
                         executeIntroScript();
                         break;
+                    case 'help':
+                        output.innerHTML += `> ${command}\nComandos disponíveis:\n- clear: Limpa o terminal\n- ls: Lista arquivos falsos\n- pwd: Mostra o diretório atual\n- site: Executa o script em js/intro\n- help: Mostra esta lista de comandos\n`;
+                        break;
                     default:
                         output.innerHTML += `> ${command}\nComando '${command}' não encontrado.\n`;
                 }
