--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         executeIntroScript();
                         break;
                     case 'help':
-                        output.innerHTML += `> ${command}\nComandos disponíveis:\n- clear: Limpa o terminal\n- ls: Lista arquivos falsos\n- pwd: Mostra o diretório atual\n- site: Executa o script em js/intro\n- help: Mostra esta lista de comandos\n`;
+                        output.innerHTML += `> ${command}\nComandos disponíveis:\n- clear: Limpa o terminal\n- ls: Lista arquivos falsos\n- pwd: Mostra o diretório atual\n- site: Entra no Site\n- help: Mostra esta lista de comandos\n`;
                         break;
                     default:
                         output.innerHTML += `> ${command}\nComando '${command}' não encontrado.\n`;
