--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <div class="terminal">
-        <pre id="output">Inicializando sistema...<br>Sistema inicializado.<br></pre>
+        <pre id="output">Inicializando sistema...<br>Sistema inicializado.<br><br>Help para ver os comandos disponíveis<br></pre>
         <div id="input-line">
             <span class="prompt">></span>
             <input type="text" id="input" autofocus>
