--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             input.addEventListener('keydown', function(event) {
                 if (event.key === 'Enter') {
-                    const command = input.value.trim();
+                    const command = input.value.trim().toLowerCase();
                     if (command) {
                         processCommand(command);
                         input.value = '';
