--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -9,7 +9,22 @@ o<!DOCTYPE html>
     <link rel="icon" type="png|image" href="../IMAGES/sailogo.png">
     <link rel="stylesheet" href="../CSS/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js">
+	    document.addEventListener('contextmenu', function(event) {
+                event.preventDefault();
+            });
+
+            input.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter') {
+                    const command = input.value.trim().toLowerCase();
+                    if (command) {
+                        processCommand(command);
+                        input.value = '';
+                    }
+                }
+            });
+    </script>
+    
 
 </head>
 <body>
