--- a/index.html
+++ b/index.html
@@ -1,177 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="png|image" href="assets/IMAGES/sailogo.png">
-    <title>Bruno Rhis - Intro</title>
-    <style>
-        body {
-            background: #000;
-            color: #00ff00;
-            font-family: 'Courier New', Courier, monospace;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="assets/IMAGES/sailogo.png">
+  <title>Bruno Rhis - Intro</title>
+  <style>
+    /* Variáveis para facilitar ajustes */
+    :root {
+      --bg-color: #121212;
+      --terminal-bg: #1e1e1e;
+      --text-color: #00ff00;
+      --cursor-color: #00ff00;
+      --shadow-color: rgba(0, 255, 0, 0.3);
+      --header-bg: #2a2a2a;
+    }
 
-        .terminal {
-            background: #000;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-            width: 80%;
-            max-width: 800px;
-            height: 70vh;
-            overflow-y: auto;
-            box-sizing: border-box;
-        }
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: var(--bg-color);
+      font-family: 'Courier New', Courier, monospace;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        #output {
-            white-space: pre-wrap;
-            margin: 0;
-        }
+    /* Container com bordas e sombra para simular a janela do terminal */
+    .terminal-container {
+      width: 90%;
+      max-width: 800px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 15px var(--shadow-color);
+    }
 
-        #input-line {
-            display: flex;
-        }
+    /* Cabeçalho simulando os botões de controle (como no macOS) */
+    .terminal-header {
+      background-color: var(--header-bg);
+      padding: 8px;
+      display: flex;
+      align-items: center;
+    }
 
-        .prompt {
-            margin-right: 10px;
-        }
+    .terminal-header .circle {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      margin-right: 6px;
+    }
+    .circle.red { background-color: #ff5f56; }
+    .circle.yellow { background-color: #ffbd2e; }
+    .circle.green { background-color: #27c93f; }
 
-        #input {
-            flex-grow: 1;
-            background: none;
-            border: none;
-            color: #00ff00;
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 16px;
-            outline: none;
-        }
+    /* Estilo do terminal */
+    .terminal {
+      background-color: var(--terminal-bg);
+      color: var(--text-color);
+      padding: 20px;
+      height: 70vh;
+      overflow-y: auto;
+      box-sizing: border-box;
+    }
 
-        #input-line .cursor {
-            border-left: 2px solid #00ff00;
-            animation: blink 1s step-end infinite;
-        }
+    #output {
+      white-space: pre-wrap;
+      margin: 0;
+    }
 
-        @keyframes blink {
-            50% {
-                border-color: transparent;
-            }
-        }
-    </style>
+    #input-line {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+    }
+
+    .prompt {
+      margin-right: 8px;
+    }
+
+    #input {
+      flex: 1;
+      background: transparent;
+      border: none;
+      color: var(--text-color);
+      font-family: inherit;
+      font-size: 16px;
+      outline: none;
+    }
+
+    /* Animação para o cursor */
+    #input-line .cursor {
+      border-left: 2px solid var(--cursor-color);
+      animation: blink 1s step-end infinite;
+      margin-left: 2px;
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+
+    /* Responsividade para telas menores */
+    @media (max-width: 600px) {
+      .terminal {
+        height: 60vh;
+        padding: 15px;
+      }
+      #input {
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="terminal">
-        <pre id="output">Inicializando sistema...<br>Sistema inicializado.<br><br>Help para ver os comandos disponíveis<br></pre>
-        <div id="input-line">
-            <span class="prompt">></span>
-            <input type="text" id="input" autofocus>
-        </div>
+  <div class="terminal-container">
+    <div class="terminal-header">
+      <div class="circle red"></div>
+      <div class="circle yellow"></div>
+      <div class="circle green"></div>
     </div>
+    <div class="terminal">
+      <pre id="output">Inicializando sistema...
+Sistema inicializado.
 
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const input = document.getElementById('input');
-            const output = document.getElementById('output');
+Digite 'help' para ver os comandos disponíveis.</pre>
+      <div id="input-line">
+        <span class="prompt">&gt;</span>
+        <input type="text" id="input" autofocus>
+      </div>
+    </div>
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const input = document.getElementById('input');
+      const output = document.getElementById('output');
 
-            // Bloqueia o clique direito
-            document.addEventListener('contextmenu', function(event) {
-                event.preventDefault();
-            });
+      // Bloqueia o clique direito
+      document.addEventListener('contextmenu', function(event) {
+        event.preventDefault();
+      });
 
-            input.addEventListener('keydown', function(event) {
-                if (event.key === 'Enter') {
-                    const command = input.value.trim().toLowerCase();
-                    if (command) {
-                        processCommand(command);
-                        input.value = '';
-                    }
-                }
-            });
+      input.addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+          const command = input.value.trim().toLowerCase();
+          if (command) {
+            processCommand(command);
+            input.value = '';
+          }
+        }
+      });
 
-            function processCommand(command) {
-                switch (command) {
-                    case 'clear':
-                        output.innerHTML = '';
-                        break;
-                    case 'ls':
-                        output.innerHTML += `> ${command}\nfile1.txt  file2.txt  script.js\n`;
-                        break;
-                    case 'pwd':
-                        output.innerHTML += `> ${command}\n/home/ElonM\n`;
-                        break;
-                    case 'site':
-                        executeIntroScript();
-                        break;
-                    case 'help':
-                        output.innerHTML += `> ${command}\nComandos disponíveis:\n- clear: Limpa o terminal\n- ls: Lista arquivos falsos\n- pwd: Mostra o diretório atual\n- site: Entra no Site\n- help: Mostra esta lista de comandos\n`;
-                        break;
-                    default:
-                        output.innerHTML += `> ${command}\nComando '${command}' não encontrado.\n`;
-                }
-                output.scrollTop = output.scrollHeight;
+      function processCommand(command) {
+        switch (command) {
+          case 'clear':
+            output.innerHTML = '';
+            break;
+          case 'ls':
+            output.innerHTML += `\n> ${command}\nfile1.txt  file2.txt  script.js\n`;
+            break;
+          case 'pwd':
+            output.innerHTML += `\n> ${command}\n/home/Bruno\n`;
+            break;
+          case 'site':
+            executeIntroScript();
+            break;
+          case 'help':
+            output.innerHTML += `\n> ${command}\nComandos disponíveis:\n- clear: Limpa o terminal\n- ls: Lista arquivos\n- pwd: Mostra o diretório atual\n- site: Entra no Site\n- help: Mostra esta lista de comandos\n`;
+            break;
+          default:
+            output.innerHTML += `\n> ${command}\nComando '${command}' não encontrado.\n`;
+        }
+        output.scrollTop = output.scrollHeight;
+      }
+
+      function executeIntroScript() {
+        const codes = [
+          "$.accessRqst = true;",
+          "function (a, b, c) {",
+          "    function d(c) {",
+          "        var d = b.console;",
+          "        if (!f[c]) {",
+          "            £[c] = true;",
+          "            a.migrateWarnings.push(c);",
+          "        }",
+          "    }",
+          "    if (d && d.warn && !a.accessRqst) {",
+          "        d.warn('Bank Transfer: ' + c);",
+          "        if (a.migrateTrace && d.trace) {",
+          "            d.trace();",
+          "        }",
+          "    }",
+          "    var username = document.getElementById('guest').value;",
+          "    var password = document.getElementById('Anonymous').value;"
+        ];
+
+        function typeCode(index) {
+          if (index < codes.length) {
+            const code = codes[index];
+            let i = 0;
+            function typeLetter() {
+              output.innerHTML += code[i];
+              i++;
+              if (i < code.length) {
+                setTimeout(typeLetter, 5);
+              } else {
+                output.innerHTML += '<br>';
+                setTimeout(() => typeCode(index + 1), 100);
+              }
             }
+            typeLetter();
+          } else {
+            setTimeout(() => {
+              output.innerHTML += "<br>Acesso concedido, guest!";
+              setTimeout(() => {
+                window.location.replace('https://www.brcybersec.com/main.html');
+              }, 5000);
+            }, 500);
+          }
+        }
+        typeCode(0);
+      }
 
-            function executeIntroScript() {
-                const codes = [
-                    "$.accessRqst = !0;",
-                    "function (a, b, c) {",
-                    "    function d(c) {",
-                    "        var d = b.console;",
-                    "        f[c] || (£[c] = !0,",
-                    "        a.migrateWarnings.push(c));",
-                    "    }",
-                    "    d && d.warn && !a.accessRqst &&",
-                    "    (d.warn('Bank Transfer: ' + c),",
-                    "    a.migrateTrace && d.trace &&",
-                    "    d.trace());",
-                    "    var username = document.getElementById('guest').value;",
-                    "    var password = document.getElementById('Anonymous').value;"
-                ];
-
-                function typeCode(index) {
-                    if (index < codes.length) {
-                        const code = codes[index];
-                        let i = 0;
-
-                        function typeLetter() {
-                            output.innerHTML += code[i];
-                            i++;
-
-                            if (i < code.length) {
-                                setTimeout(typeLetter, 5);
-                            } else {
-                                output.innerHTML += '<br>';
-                                setTimeout(() => {
-                                    typeCode(index + 1);
-                                }, 100);
-                            }
-                        }
-
-                        typeLetter();
-                    } else {
-                        setTimeout(() => {
-                            output.innerHTML += "<br>Acesso concedido, guest!";
-
-                            setTimeout(() => {
-                                if (window.location.href !== 'https://www.brcybersec.com/main.html') {
-                                    window.location.replace('https://www.brcybersec.com/main.html');
-                                }
-                            }, 5000);
-                        }, 500);
-                    }
-                }
-
-                typeCode(0);
-            }
-
-            input.focus();
-        });
-    </script>
+      input.focus();
+    });
+  </script>
 </body>
 </html>
