--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@ Digite 'help' para ver os comandos disponíveis.</pre>
             output.innerHTML = '';
             break;
           case 'ls':
-            output.innerHTML += `\n> ${command}\nfile1.txt  file2.txt  script.js\n`;
+            output.innerHTML += `\n> ${command}\nfile1.txt  file2.txt  script.js root.txt\n`;
             break;
           case 'pwd':
-            output.innerHTML += `\n> ${command}\n/home/Bruno\n`;
+            output.innerHTML += `\n> ${command}\n/home/ElonM\n`;
             break;
           case 'site':
             executeIntroScript();
